--- a/src/data/grammar/mtg-sets.yaml
+++ b/src/data/grammar/mtg-sets.yaml
@@ -31,6 +31,9 @@
       "Weatherlight",
       "Zendikar"
   ],
+  "cardBlock": [
+    "[cardBlockName:Invasion][cardBlockSet:Invasion,Planeshift,Apocalypse]"
+  ],
   "randomCardSet": [
     "#cardSet#",
     "#cardSet#",
